BUGFIX | STYLE | circles - flex did not work on IE

--- a/wp-content/themes/ecp-child/amadded/assets/scss/modules/_circles.scss
+++ b/wp-content/themes/ecp-child/amadded/assets/scss/modules/_circles.scss
@@ -36,24 +36,26 @@
             
             box-sizing: border-box;
             float:left;
+            display:block;
 
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            // display: flex;
+            // align-items: center;
+            // justify-content: center;
             @include animate();
 
             > .aligner {
-                display: inline-block;
-                padding: 0;
-                -webkit-box-flex: 1;
-                -webkit-flex: 1;
-                -ms-flex: 1;
-                flex: 1;
-                max-width: 90%;
-                height: auto;
+                height:100%;
+                // display: inline-block;
+                // padding: 0;
+                // -webkit-box-flex: 1;
+                // -webkit-flex: 1;
+                // -ms-flex: 1;
+                // flex: 1;
+                // max-width: 90%;
+                // height: auto;
 
                 text-align: center;
-                // padding:$offset-2 $offset-1 0 $offset-1;
+                padding:$offset-2 $offset-1 0 $offset-1;
 
                 strong {
                     display:block;
@@ -85,7 +87,7 @@
         .circle-container {
             .circle {
                 > .aligner {
-                    padding:0;//$offset-g1 $offset-g1 0 $offset-g1;
+                    padding:$offset-g1 $offset-g1 0 $offset-g1;
 
                     span {
                         font-size:10px;
